--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,15 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+@charset "UTF-8";
+.app-top-bar .el-dropdown.is-active .el-icon--right {
+  transform: rotate(-180deg);
+  transition: transform 0.3s, color 0.3s;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+.app-top-bar .el-dropdown.is-active .el-dropdown-link {
+  color: #ffa429;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.app-top-bar .el-dropdown .el-icon--right {
+  transform: rotate(0deg);
+  /* 收起时箭头位置 */
+  transition: transform 0.3s, color 0.3s;
 }
